--- a/RNN-task.ipynb
+++ b/RNN-task.ipynb
@@ -704,7 +704,7 @@
     "samples = [generate_sample('Al') for i in range(25)]\n",
     "print(samples)\n",
     "submission = (history,samples)\n",
-    "submit_char_rnn(submission, None, email = \"gikram@edu.hse.ru\", token=\"RFaAnsPOiPYVTVUP\")"
+    "submit_char_rnn(submission, None, email = \"", token=\"")"
    ]
   },
   {
