--- a/Tensorflow-task.ipynb
+++ b/Tensorflow-task.ipynb
@@ -456,7 +456,7 @@
     }
    ],
    "source": [
-    "submit.submit_mse(compute_mse, \"gikram@edu.hse.ru\", \"1lvVZO0QniHG0o85\")"
+    "submit.submit_mse(compute_mse, \"", \"1lvVZO0QniHG0o85\")"
    ]
   },
   {
@@ -1149,7 +1149,7 @@
     }
    ],
    "source": [
-    "grade_submitter.submit(\"gikram@edu.hse.ru\", \"IFWabF9o5zNNQXnT\")"
+    "grade_submitter.submit(\"", \"IFWabF9o5zNNQXnT\")"
    ]
   },
   {
