--- a/week01_pa.ipynb
+++ b/week01_pa.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "# token expires every 30 min\n",
     "COURSERA_TOKEN = \"95lRLeepwzMAwHIY\" ### YOUR TOKEN HERE\n",
-    "COURSERA_EMAIL = \"gikram@edu.hse.ru\" ### YOUR EMAIL HERE"
+    "COURSERA_EMAIL = \"" ### YOUR EMAIL HERE"
    ]
   },
   {
