--- a/Autoencoders-task.ipynb
+++ b/Autoencoders-task.ipynb
@@ -1017,7 +1017,7 @@
     "\n",
     "# token expires every 30 min\n",
     "COURSERA_TOKEN = \"z8KDCoT4PlKFqLUY\"### YOUR TOKEN HERE\n",
-    "COURSERA_EMAIL = \"gikram@edu.hse.ru\"### YOUR EMAIL HERE\n",
+    "COURSERA_EMAIL = \"\"### YOUR EMAIL HERE\n",
     "\n",
     "submit_autoencoder(submission, reconstruction_mse, COURSERA_EMAIL, COURSERA_TOKEN)"
    ]
