--- a/week3_task1_first_cnn_cifar10_clean.ipynb
+++ b/week3_task1_first_cnn_cifar10_clean.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "# token expires every 30 min\n",
     "COURSERA_TOKEN = \"USskuqZR5JgrUa7Y\"### YOUR TOKEN HERE\n",
-    "COURSERA_EMAIL = \"gikram@edu.hse.ru\"### YOUR EMAIL HERE"
+    "COURSERA_EMAIL = \""### YOUR EMAIL HERE"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "outputs": [],
    "source": [
     "# you can make submission with answers so far to check yourself at this stage\n",
-    "grader.submit(\"gikram@edu.hse.ru\", \"vZYcAjS0vPrPsKue\")"
+    "grader.submit(\"", \"vZYcAjS0vPrPsKue\")"
    ]
   },
   {
@@ -761,7 +761,7 @@
    ],
    "source": [
     "# you can make submission with answers so far to check yourself at this stage\n",
-    "grader.submit(\"gikram@edu.hse.ru\", \"soZKW8M3CTdBJO4p\")"
+    "grader.submit(\"\", \"soZKW8M3CTdBJO4p\")"
    ]
   },
   {
@@ -1185,7 +1185,7 @@
    ],
    "source": [
     "# you can make submission with answers so far to check yourself at this stage\n",
-    "grader.submit(\"gikram@edu.hse.ru\", \"soZKW8M3CTdBJO4p\")"
+    "grader.submit(\"", \"soZKW8M3CTdBJO4p\")"
    ]
   },
   {
